--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: action/setup-node
+    - uses: action/setup-node@master
       with:
         node-version: '11.x'
     - name: Install Dependencies
