--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: action/setup-node@master
+    - uses: action/checkout@v2
+    - uses: action/setup-node@v1
       with:
         node-version: '11.x'
     - name: Install Dependencies
